Remove transition css to prevent flickering

--- a/src/app/shared/video-panel/video-panel.component.scss
+++ b/src/app/shared/video-panel/video-panel.component.scss
@@ -24,7 +24,6 @@
   position: absolute;
   opacity: 0;
   top: 0;
-  transition: opacity 100ms;
   width: 100%;
 }
 
